--- a/messages.html
+++ b/messages.html
@@ -36,6 +36,12 @@
             <span class="nav-text" style="font-family: 'Great Vibes', cursive; font-size: 1.2rem;">Profile</span>
         </a>
     </li>
+              <li class="nav-item">
+                    <a href="stream.html" class="nav-links active">
+                        <i class="fas fa-play-circle"></i>
+                        <span class="nav-text" style="font-family: 'Great Vibes', cursive; font-size: 1.1rem;">Stream</span>
+                    </a>
+                </li>  
     <li class="nav-item">
         <a href="#" id="logoutBtn" class="nav-links">
             <i class="fas fa-sign-out-alt"></i>
