--- a/posts.html
+++ b/posts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources - SafeConnect</title>
+    <title>Resources - WhipRoom</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -444,7 +444,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="index.html" class="logo">SafeConnect</a>
+            <a href="index.html" class="logo">WhipRoom</a>
             <div class="nav-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -468,6 +468,12 @@
                     <a href="posts.html" class="nav-links active">
                         <i class="fas fa-graduation-cap"></i>
                         <span class="nav-text" style="font-family: 'Great Vibes', cursive; font-size: 1.1rem;">Resources</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="stream.html" class="nav-links active">
+                        <i class="fas fa-play-circle"></i>
+                        <span class="nav-text" style="font-family: 'Great Vibes', cursive; font-size: 1.1rem;">Stream</span>
                     </a>
                 </li>
                 <li class="nav-item">
