--- a/profile.html
+++ b/profile.html
@@ -783,6 +783,12 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="stream.html" class="nav-links active">
+                        <i class="fas fa-play-circle"></i>
+                        <span class="nav-text" style="font-family: 'Great Vibes', cursive; font-size: 1.1rem;">Stream</span>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="account.html" class="nav-links active">
                         <i class="fas fa-user-shield"></i>
                         <span>My Profile</span>
